Emoji alignment fix
Currently, the image centering also applies to emojis in text. This fixes it while also giving more control to image alignment. Original snippet and instructions by gautamneeraj: https://forum.obsidian.md/t/align-image/78050

--- a/theme.css
+++ b/theme.css
@@ -228,15 +228,22 @@ body {
     --prompt-width: 450px;
 }
 
-/* --- images --- */
 
-img {
+/* --- images --- */
+/*original snippet and instructions by gautamneeraj: https://forum.obsidian.md/t/align-image/78050*/
+img[alt*="center"] {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    border-radius: var(--radius-m);
 }
 
+img[alt*="right"] {
+    float:right;
+    clear:right;
+    margin-left: 1rem;
+    margin-bottom: 2px;
+    margin-top: 2px;
+}
 
 
 /* --- tabs ---*/
